<resources>
    <string name="app_name">Calculator</string>
    <string name="edt_display"/>
    <string name="edt_answer"/>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_zero">0</string>
    <string name="btn_decimal">.</string>
    <string name="btn_equal">\u003D</string>
    <string name="btn_clear">AC</string>
    <string name="btn_addition">\u002B</string>
    <string name="btn_minus">-</string>
    <string name="btn_multiplication">\u00D7</string>
    <string name="btn_division">\u00F7</string>
    <string name="btn_delete">DEL</string>
    <string name="btn_negative">(-)</string>
    <string name="btn_history">History</string>
    <string name="btn_deleteAll">Clear History</string>
</resources>
