<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f9966b"
    android:orientation="vertical"
    tools:context="com.example.secret.calculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:inputType="none"
            android:text="@string/edt_display"
            android:textSize="30sp"
            android:gravity="bottom"
            android:textAlignment="textEnd"
            android:maxLines="1"
            android:id="@+id/editText"
            android:background="#f6c0c0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fcdfff">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="none"
            android:maxLines="1"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:layout_marginTop="5dp"
            android:id="@+id/editText2"
            android:background="#fcdfff"
            android:text="@string/edt_answer"/>

        <Button
            android:id="@+id/button18"
            android:layout_gravity="end"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#E41B17"
            android:text="@string/btn_delete"
            android:textColor="#FFF8D6"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="5">

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button7"
                android:layout_weight="1.5"
                android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button8"
                android:layout_weight="1.5"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_nine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button9"
                android:layout_weight="1.5"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_addition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textSize="20sp"
                android:id="@+id/button14"
                    android:background="#e3e4fa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="5">

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button4"
                android:layout_weight="1.5"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button5"
                android:layout_weight="1.5"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button6"
                android:layout_weight="1.5"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button15"
                android:textSize="20sp"
                android:layout_weight="1.5"
                    android:background="#e3e4fa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="5">

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button"
                android:layout_weight="1.5"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button2"
                android:layout_weight="1.5"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button3"
                android:layout_weight="1.5"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_multiplication"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button16"
                android:layout_weight="1.5"
                android:textSize="20sp"
                    android:background="#e3e4fa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="5">

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_decimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button12"
                android:textSize="20sp"
                android:layout_weight="1.5"
                android:textStyle="bold"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button10"
                android:layout_weight="1.5"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_negative"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button19"
                android:layout_weight="1.5"
                    android:background="#fdeef4"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_division"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:id="@+id/button17"
                android:layout_weight="1.5"
                    android:background="#e3e4fa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_history"
                android:textColor="#FFF8D6"
                android:background="#E41B17"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/button20"
                android:layout_width="match_parent"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_clear"
                    android:textColor="#FFF8D6"
                    android:background="#c11b17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button13"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_equal"
                    android:textColor="#FFF8D6"
                    android:background="#c24641"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button11"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
